fixed hero-section mobile modal styles

--- a/css/main.css
+++ b/css/main.css
@@ -122,18 +122,24 @@ button {
 
 .nav__link {
   color: #212121;
-  font-size: 14px;
   font-weight: 500;
   letter-spacing: 0.02em;
   display: block;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
+  font-size: 40px;
+  line-height: 47px;
 }
 .nav__link:hover, .nav__link:focus {
   color: #2196f3;
 }
 .nav__link--current {
   color: #2196f3;
+}
+@media (min-width: 1140px) {
+  .nav__link {
+    font-size: 14px;
+  }
 }
 
 @media (min-width: 768px) {
@@ -174,12 +180,29 @@ button {
 
 .page-header__menu-container {
   display: none;
-  position: absolute;
-  top: 100%;
+  overflow: auto;
+}
+.page-header__menu-container.is-open {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
   left: 0;
-  width: 100%;
-  background: #ffffff;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(0, 0, 0);
+  padding: 40px;
+  background-color: #fff;
+  z-index: 5;
+}
+
+.nav__list-item {
+  margin-bottom: 35px;
+}
+
+body.overflow {
+  overflow: hidden;
 }
 
 @media (min-width: 768px) {
@@ -220,9 +243,16 @@ button {
 }
 
 .page-header__menu-button {
-  display: flex;
+  height: 50px;
+  width: 50px;
   border: none;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  z-index: 99;
   background-color: transparent;
+  border-radius: 5px;
   margin-left: auto;
 }
 
@@ -230,16 +260,54 @@ button {
   display: none;
 }
 
-.is-open .icon-cross {
+.page-header__menu-button.is-open .icon-cross {
   display: block;
 }
-.is-open .icon-menu {
+.page-header__menu-button.is-open .icon-menu {
   display: none;
 }
 
-.page-header__menu-container.is-open {
-  display: block;
-  padding: 48px 40px;
+.mobile-menu__socials-list {
+  display: flex;
+}
+
+.mobile-menu__socials-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 122%;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.mobile-menu__socials-link:not(.last) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
+  padding: 0 10px;
+}
+
+.mobile-menu__socials-link.last {
+  padding-left: 10px;
+}
+
+.contact__list {
+  margin-bottom: 64px;
+}
+
+.contact__link-number {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+  margin-bottom: 32px;
+}
+
+.contact__link-mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: #757575;
 }
 
 .hero-section {
@@ -333,8 +401,8 @@ button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 76.5vh;
   background-color: #ffffff;
   border-radius: 4px;
   padding: 40px;
@@ -423,8 +491,13 @@ button {
 
 .modal-form__checkbox-icon {
   position: absolute;
-  left: 12px;
+  left: 0;
   bottom: 5px;
+}
+@media (min-width: 1140) {
+  .modal-form__checkbox-icon {
+    left: 12px;
+  }
 }
 .modal-form__checkbox-icon--checked {
   visibility: hidden;
@@ -438,11 +511,16 @@ button {
 }
 
 .modal-form__checkbox-data {
-  font-size: 14px;
+  font-size: 12px;
   line-height: 171%;
   letter-spacing: 0.03em;
-  margin-right: 11px;
   margin-left: auto;
+}
+@media (min-width: 1140) {
+  .modal-form__checkbox-data {
+    font-size: 14px;
+    margin-right: 11px;
+  }
 }
 
 .modal-form__checkbox-link {
