--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -10,7 +10,6 @@
   justify-content: space-between;
 }
 
-
 .logo--blue-text {
   color: $--accent-text-color;
 }
@@ -21,13 +20,13 @@
 
 .nav__link {
   color: $--title-text-color;
-  font-size: 14px;
   font-weight: 500;
   letter-spacing: 0.02em;
   display: block;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
-
+  font-size: 40px;
+  line-height: 47px;
   &:hover,
   &:focus {
     color: $--accent-text-color;
@@ -35,32 +34,34 @@
   &--current {
     color: $--accent-text-color;
   }
-  
+  @media (min-width: 1140px) {
+    font-size: 14px;
+  }
 }
 
 @media (min-width: 768px) {
   .contact__list {
-  display: flex;
-  margin-left: auto;
-  padding: 0;
-.nav__link {
-    padding: 32px 0;
-}
-}
+    display: flex;
+    margin-left: auto;
+    padding: 0;
+    .nav__link {
+      padding: 32px 0;
+    }
+  }
 
-.contact__list-item:not(:last-child) {
-  margin-right: 50px;
-}
-.header__logo {
-  margin-right: 93px;
-}
-.nav__list {
-  display: flex;
-}
+  .contact__list-item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .header__logo {
+    margin-right: 93px;
+  }
+  .nav__list {
+    display: flex;
+  }
 
-.nav__list-item:not(:last-child) {
-  margin-right: 50px;
-}
+  .nav__list-item:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
 .contact__link {
@@ -81,21 +82,38 @@
 
 .page-header__menu-container {
   display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-
-  background: #ffffff;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
-    0px 1px 3px rgba(0, 0, 0, 0.16);
+  &.is-open {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgb(0, 0, 0);
+    padding: 40px;
+    background-color: #fff;
+    z-index: 5;
+  }
+  overflow: auto;
 }
 
-@media (min-width:768px) {
+.nav__list-item {
+  margin-bottom: 35px;
+}
+
+body {
+  &.overflow {
+    overflow: hidden;
+  }
+}
+
+@media (min-width: 768px) {
   .page-header__menu-button,
-    .icon-menu,
-    .icon-cross {
-      display: none;
+  .icon-menu,
+  .icon-cross {
+    display: none;
   }
   .nav-link--current::after {
     content: '';
@@ -109,19 +127,18 @@
   }
 }
 
-@media (max-width:767px) {
-  .page-header__nav-contact-container
-   {
+@media (max-width: 767px) {
+  .page-header__nav-contact-container {
     display: none;
   }
   .page-header__container {
-    max-width:480px;
-          margin-left: auto;
+    max-width: 480px;
+    margin-left: auto;
     margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
   }
-  
+
   .page-header__container {
     display: flex;
   }
@@ -133,17 +150,24 @@
 }
 
 .page-header__menu-button {
-  display: flex;
+  height: 50px;
+  width: 50px;
   border: none;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  z-index: 99;
   background-color: transparent;
-  margin-left: auto;  
+  border-radius: 5px;
+  margin-left: auto;
 }
 
 .icon-cross {
   display: none;
 }
 
-.is-open {
+.page-header__menu-button.is-open {
   & .icon-cross {
     display: block;
   }
@@ -152,7 +176,43 @@
   }
 }
 
-.page-header__menu-container.is-open {
-    display: block;
-    padding: 48px 40px;
+.mobile-menu__socials-list {
+  display: flex;
+}
+
+.mobile-menu__socials-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 122%;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.mobile-menu__socials-link:not(.last) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
+  padding: 0 10px;
+}
+.mobile-menu__socials-link.last {
+  padding-left: 10px;
+}
+.contact__list {
+  margin-bottom: 64px;
+}
+
+.contact__link-number {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+  margin-bottom: 32px;
+}
+
+.contact__link-mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: #757575;
 }
